# allow2homeassistant

./: .gitignore  CHANGELOG.md  DESIGN_SUMMARY.md  DOCS.md  Dockerfile  LICENSE  NAMING_CONVENTIONS.md  QUICK_REFERENCE.md  README.md  build.yaml  config.yaml  hacs.json  pyproject.toml  repository.yaml  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  hacs.yaml  lint.yaml  release.yaml  test.yaml
custom_components/allow2/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
docs/: API_INTEGRATION.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  OVERVIEW.md  PUBLISHING_RESEARCH.md  README.md  USE_CASES.md
old/docs/: API_INTEGRATION.md
translations/: en.yaml
